services/monitoring/overlays/prod/patches/disable-prom-adapter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: monitoring
spec:
  replicas: 0
