services/monitoring/overlays/prod/patches/grafana-strategic-patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  # 1- Set Recreate strategy, because of Persistent Storage.
  strategy:
    type: Recreate
  template:
    spec:
      # Make sure Prometheuses run on different x86 nodes
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                  - amd64
      # 2- Set security context to 65534.
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsNonRoot: true
      containers:
      - name: grafana
        # 3- Set envFrom values to Grafana admin credz, Grafana settings and Github SSO.
        volumeMounts:
        - mountPath: /grafana-dashboard-definitions/0/custom-dashboards
          name: grafana-dashboards-custom
        - mountPath: /grafana-dashboard-definitions/0/custom-dashboards-2
          name: grafana-dashboards-custom-2
        # - mountPath: /grafana-dashboard-definitions/0/custom-dashboards-3
        #   name: grafana-dashboards-custom-3
        - mountPath: /grafana-dashboard-definitions/0/custom-dashboards-4
          name: grafana-dashboards-custom-4
      volumes:
      # 5- Set Grafana Persistent Storage volume.
      - emptyDir: null
        name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-storage
      # 6- Set Grafana custom dashboards volume.
      - name: grafana-dashboards-custom
        configMap:
          defaultMode: 420
          name: grafana-dashboards-custom
      - name: grafana-dashboards-custom-2
        configMap:
          defaultMode: 420
          name: grafana-dashboards-custom-2
      # - name: grafana-dashboards-custom-3
      #   configMap:
      #     defaultMode: 420
      #     name: grafana-dashboards-custom-3
      - name: grafana-dashboards-custom-4
        configMap:
          defaultMode: 420
          name: grafana-dashboards-custom-4
